# Atlas

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_AUDIT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_REPORT.md  Dockerfile  README.md  alembic.ini  dump.py  equal_backtest.txt  main.py  maxsharpe_backtest.txt  minvar_backtest.txt  oof_analysis.py  pyproject.toml  requirements.txt  riskparity_backtest.txt  run_sim.py  scheduler.py  scratch_recalc.py  start.sh  test_delete.py
analytics/: __init__.py
analytics/backtesting/: __init__.py  (+3 more)
config/: __init__.py  factor_weights.yaml  holdout_symbols.yaml  logging.yaml  settings.py  settings.yaml
core/: __init__.py  decorators.py  exceptions.py  logging.py  types.py
dashboard/: __init__.py  app.py
data/: __init__.py  backfill_manager.py  data_manager.py
database/: __init__.py  connection.py  models.py
deployment/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  INDICATOR_ENGINE.md
logs/: .gitkeep
ml/: __init__.py
models/: feature_columns.json  model_registry.json
repositories/: __init__.py  backtest_repository.py  indicator_repository.py  market_data_repository.py  news_repository.py  signal_repository.py  stock_repository.py  system_log_repository.py  trade_repository.py
research/: README.md  indicator_engine_demo.py  visualization_demo.py
scheduler/: __init__.py  job_runner.py
services/: __init__.py  backtesting_service.py  indicator_service.py  market_data_service.py  paper_trading_service.py  scoring_service.py  sentiment_service.py  signal_service.py
tests/: __init__.py  conftest.py
(+101 files in other folders)
