[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "project-atlas"
version = "0.1.0"
description = "Autonomous AI Trading Research Platform"
authors = [{ name = "Atharv" }]
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "database*", "repositories*", "services*", "data*", "ml*", "analytics*", "scheduler*", "dashboard*"]

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | logs
  | research
)/
'''

# ─── isort ────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["config", "core", "database", "repositories", "services", "data", "ml", "analytics", "scheduler", "dashboard"]

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ─── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/__init__.py",
    "research/*",
    "logs/*",
    ".venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
